--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "run-s build:*",
+    "build:remix": "remix build",
+    "build:tailwindcss": "tailwindcss -i ./app/styles/index.css --minify -o ./app/styles.css",
+    "dev": "run-p dev:*",
+    "dev:remix": "remix dev",
+    "dev:tailwindcss": "tailwindcss -i ./app/styles/index.css -o ./app/styles.css --watch",
     "start": "remix-serve build"
   },
   "dependencies": {
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "flowbite": "^1.4.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.5.1",
@@ -22,6 +28,7 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "eslint": "^8.15.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.6.4"
   },
   "engines": {
