--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flowbite": "^1.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
